syntax = "proto3";

package calculator;

option go_package = "./calculatorpb";

message Sum {
  repeated double values = 1;
}

message SumRequest {
  Sum sum = 1;
}

message SumResponse {
  double result = 1;
}


message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 prime_number = 1;
}

message ComputeAverageRequest {
  double number = 1;
}

message ComputeAverageResponse {
  double result = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 result = 1;
}

message SquareRootRequest{
  double number = 1;
}
message SquareRootResponse{
  double square_root = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

  // error hanbdling
  // this RPC will throw an exception if the send number is negative
  // the error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}